--- a/index.css
+++ b/index.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    /* border: 1px solid black; */
 }
 
 body {
@@ -13,21 +12,27 @@ body {
 
 main{
     background-color: hsl(244, 38%, 16%);
-    width: 350px;
+    width: 95%;
     margin: auto;
-    margin-top: 3%;
+    margin-top: 10vw;
     border-radius: 10px;
-    padding-bottom: 2%;
     margin-bottom: 2%;
 }
 
-main figure, main figure picture{
+main figure{position: relative;}
+main figure::before{
+    content: "";
+    position: absolute;
     width: 100%;
+    height: 99%;   
+    background-color: rgba(255, 2, 255, 0.382);
+    border-radius: 10px 0 0 10px;
 }
 
 main figure picture img{
     width: 100%;
-    border-radius: 10px 10px 0 0;
+    border-radius: 10px 0 0 10px;
+    box-shadow: 0 5px 10px rgb(250, 140, 250);
 }
 
 main section h2{
@@ -96,26 +101,15 @@ footer, footer a{
     
 
     main{
-        min-width: 800px;
+        width: 800px;
         padding-bottom: 0;
         transform: rotateY(180deg);
-        /* height: 324.4px; */
     }
 
     main figure, main section{
         display: inline-block;
         width: 49%;
         vertical-align: middle;
-    }
-
-
-    main figure, main figure picture{
-        height: min-content;
-    }
-
-    main figure picture img{
-        border-radius: 10px 0 0 10px;
-        box-shadow: 0 0 20px rgba(200,200,200,0.5);
     }
 
     main section {
